tests/errors/own_err/own_err.c
#error own_err.own_err:6:7 This variable of owned type is not used.
#error own_err.own_err:12:23 This variable of owned type is already used and cannot be used here.
#error own_err.own_err:18:15 This variable of owned type is already used and cannot be used here.
#error own_err.own_err:24:7 This variable of owned type is not used.
#error own_err.own_err:30:25 This variable of owned type must not be used in this branch because the previous branch does not use it.
#error own_err.own_err:41:10 This branch must use a particular set of variables that are used in the previous branch. Variables: [part]
#error own_err.own_err:46:9 This variable of owned type is not used.
#error own_err.own_err:52:7 This variable of owned type is not used.
#error own_err.own_err:55:25 This variable of owned type must not be used in local functions and function expressions.
#error own_err.own_err:63:14 This variable of owned type cannot be defined by AS pattern.
#error own_err.own_err:69:7 This variable of owned type is not used.
#error own_err.own_err:76:8 This variable of owned type is not used.
#error own_err.own_err:84:12 Functions that take a value of owned type can't be partially applied.
#error own_err.own_err:101:7 This variable of owned type is not used.
#error own_err.own_err:108:7 This variable of owned type is not used.
#error own_err.own_err:115:7 This variable of owned type is not used.
#error own_err.own_err:121:13 This static variable cannot be an owned type.
#error own_err.own_err:127:14 This generic function cannot bind type variables to owned types.
#error own_err.own_err:133:36 Fields cannot be owned types for now.
#error own_err.own_err:137:31 This variant of owned type is invalid for now. This error happens when a union contains another owned union type. Consider to use the Own type directly.
